# Seneschal

./: .env.example  .gitignore  README.md  pyproject.toml
agent_home_template/: INDEX.md
agent_home_template/projects/example/: NOTES.md
agent_home_template/skills/example/: SKILL.md
config/: broker_policy.example.yaml  egress_allowlist.example.txt  ingest_allowlists.example.yaml
deploy/nftables/: agent-egress.nft
deploy/systemd/: seneschal-broker.service  seneschal-dispatcher.service  seneschal-orchestrator.service  seneschal-scheduler-digest.service  seneschal-scheduler-digest.timer  seneschal-shim.service
docs/: ARCHITECTURE.md
eval/: test_regression.py
eval/regression/: manifest.yaml
src/seneschal/: __init__.py
src/seneschal/broker/: client.py  server.py
src/seneschal/channels/: email.py  shim.py  sms.py  voice.py
src/seneschal/common/: __init__.py  config.py  schemas.py
src/seneschal/correspondence/: store.py
src/seneschal/dispatcher/: daemon.py  redaction.py  store.py
src/seneschal/ingest/: service.py
src/seneschal/mcp/: client.py
src/seneschal/memory/: episodic.py  semantic.py  working.py
src/seneschal/orchestrator/: core.py  prompts.py
src/seneschal/scheduler/: __main__.py  injector.py
src/seneschal/skills/: loader.py
src/seneschal/trace/: logger.py  query.py
tests/: test_schemas.py
